CSHTML Management Migration
xd

--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
@@ -1,27 +1,23 @@
-﻿
-@{
-    Layout = null;
-}
-
 <!DOCTYPE html>
 
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Scotia Suppliers Admin</title>
-    <link href="~/Design/Management/main.css" rel="stylesheet" />
-    <link href="~/Design/Management/reset.css" rel="stylesheet" />
+    <title>Index</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
 <body>
     <header>
         <div id="navegador">
             <nav class="navegador">
                 <div class="logo_colpatria">
-                    <ul></ul>
+                    <ul>
+                    </ul>
                 </div>
                 <div class="usuario">
                     <ul>
-                        <li><a href=""><img src="~/Design/Management/go.png"></a></li>
+                        <li><a href=""><img src="go.png"></a></li>
                         <h1><a href="">Duvan Pedroza</a></h1>
                     </ul>
                 </div>
@@ -33,7 +29,7 @@
             <ul>
                 <li><a><span>Provedores</span></a></li>
                 <li><a><span>Seguimiento</span></a></li>
-            </ul>
+            </ul>            
         </div>
     </section>
     <section>
