Main front changed

--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
@@ -12,8 +12,12 @@
         <div id="navegador">
             <nav class="navegador">
                 <div class="logo_colpatria">
-                    <ul>
-                    </ul>
+                    <div class="animated2 flash2">
+                        <img src="Colpatria.png">
+                    </div>
+                    <div class="animated2 flash">
+                        <img src="Scotia.png">
+                    </div>
                 </div>
                 <div class="usuario">
                     <ul>
@@ -24,6 +28,9 @@
             </nav>
         </div>
     </header>
+    <div class="search">
+        Buscar
+    </div>
     <section class="selector">
         <div class="seleccion">
             <ul>
