--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
@@ -29,13 +29,12 @@
         </div>
     </header>
     <div class="search">
-        Buscar
     </div>
     <section class="selector">
         <div class="seleccion">
             <ul>
-                <li><a><span>Provedores</span></a></li>
-                <li><a><span>Seguimiento</span></a></li>
+                <li><a href="#">Provedores</a></li>
+                <h2><a href="#">Seguimiento</a></h2>
             </ul>            
         </div>
     </section>
