--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
@@ -6,6 +6,7 @@
     <title>Index</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -22,7 +23,7 @@
                 <div class="usuario">
                     <ul>
                         <li><a href=""><img src="go.png"></a></li>
-                        <h1><a href="">Duvan Pedroza</a></h1>
+                        <h1><a href="" class="nombre">Duvan Pedroza</a></h1>
                     </ul>
                 </div>
             </nav>
