--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
@@ -32,14 +32,11 @@
     </div>
     <section class="selector">
         <div class="seleccion">
-            <ul>
-                <li><a href="#">Provedores</a></li>
-                <h2><a href="#">Seguimiento</a></h2>
-            </ul>            
+            <h2><a href="#">Provedores</a></h2>    
         </div>
-    </section>
-    <section>
-        <p></p>
+        <div class="seleccion2">
+            <h2><a href="#">Seguimiento</a></h2>    
+        </div>
     </section>
 </body>
 </html>
