--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
@@ -6,7 +6,6 @@
     <title>Index</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="reset.css">
-    <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -34,12 +33,12 @@
     <section class="selector">
         <div class="contenedor" id="uno">
 			<img class="icon" src="libreta.png">
-			<p class="texto">provedores</p>
+			<p class="texto">Provedores</p>
 		</div>
 
 		<div class="contenedor" id="dos">
 			<img class="icon" src="ojo.png">
-			<p class="texto">seguimiento</p>
+			<p class="texto">Seguimiento</p>
 		</div>
     </section>
     <script src="../../Scripts/jquery-1.8.0.min.js"></script>
