--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
@@ -30,9 +30,14 @@
         </div>
     </header>
     <div class="search">
-            <input type="search">
-            <button>Go</button>
     </div>
-    
+    <section class="selector">
+        <div class="seleccion">
+            <h2><a href="#">Provedores</a></h2>    
+        </div>
+        <div class="seleccion2">
+            <h2><a href="#">Seguimiento</a></h2>    
+        </div>
+    </section>
 </body>
 </html>
