--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
@@ -6,7 +6,6 @@
     <title>Index</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="reset.css">
-    <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -32,12 +31,29 @@
     <div class="search">
     </div>
     <section class="selector">
-        <div class="seleccion">
-            <h2><a href="#">Provedores</a></h2>    
-        </div>
-        <div class="seleccion2">
-            <h2><a href="#">Seguimiento</a></h2>    
-        </div>
+        <div class="contenedor" id="uno">
+			<img class="icon" src="libreta.png">
+			<p class="texto">Provedores</p>
+		</div>
+
+		<div class="contenedor" id="dos">
+			<img class="icon" src="ojo.png">
+			<p class="texto">Seguimiento</p>
+		</div>
     </section>
+    <script src="../../Scripts/jquery-1.8.0.min.js"></script>
+    <script>
+        $('#uno, #dos').hover(function(){
+            $(this).stop().animate({
+                height: "250px",
+                maxHeight: "260px"
+            });
+        }, function(){
+            $(this).stop().animate({
+                height: "200px",
+                maxHeight: "215px"
+            });
+        });
+    </script>
 </body>
 </html>
