--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
@@ -6,13 +6,14 @@
     <title>Index</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Coustard" rel="stylesheet">
 </head>
 <body>
     <header>
         <div id="navegador">
             <nav class="navegador">
                 <div class="logo_colpatria">
-                    <div class="animated2 flash2">
+                    <div class="animated flash2">
                         <img src="Colpatria.png">
                     </div>
                     <div class="animated2 flash">
@@ -21,14 +22,16 @@
                 </div>
                 <div class="usuario">
                     <ul>
-                        <li><a href=""><img src="go.png"></a></li>
-                        <h1><a href="" class="nombre">Duvan Pedroza</a></h1>
+                        <li><a href=""><img src="profileimg.png"></a></li>
+                        <h1><a href="" class="nombre">ADMINISTRADOR</a></h1>
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
     <div class="search">
+        <button class="srch"><img src="lupa2.png"></button>    
+        <input type="search" class="inpt">    
     </div>
     <section class="selector">
         <div class="contenedor" id="uno">
