--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Management/PRUEBA.html
@@ -6,14 +6,13 @@
     <title>Index</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="reset.css">
-    <link href="https://fonts.googleapis.com/css?family=Coustard" rel="stylesheet">
 </head>
 <body>
     <header>
         <div id="navegador">
             <nav class="navegador">
                 <div class="logo_colpatria">
-                    <div class="animated flash2">
+                    <div class="animated2 flash2">
                         <img src="Colpatria.png">
                     </div>
                     <div class="animated2 flash">
