--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/index.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/index.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="#">Lorena Rodiguez</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#about"><img src="profileimg.png" alt=""></a>
+                    <a><img src="profileimg.png" alt=""></a>
                   </li>
                 </ul>
               </div>
@@ -53,9 +53,8 @@
             <div class="container">
                 <div class="row">
                     <div class="heading wow fadeInUp">
-                        <h2>Find Better Solutions Build Better Products</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</p>
-                    </div>
+                        <h2>Provedores</h2>
+                   </div>
                     <div class="col-sm-6 col-md-3 wow fadeInLeft">
                         <div class="block">
                             <i class="tf-strategy"></i>   
@@ -127,7 +126,6 @@
         <script src="js/jquery.form.js"></script>
         <script src="js/jquery.nav.js"></script>
         <script src="js/wow.min.js"></script>
-        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script> -->
         <script src="js/main.js"></script>
         
     </body>
