--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/index.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Infinity Coming Soon Bootstrap 4 Template </title>
+        <title>Provedores</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400i|Source+Sans+Pro:300,400,600,700" rel="stylesheet">
@@ -20,12 +20,8 @@
             <nav class="navbar navbar-fixed-top  navigation " id="top-nav">
               <div class="collapse navbar-toggleable-md" id="navbarResponsive">
                 <ul class="nav navbar-nav menu float-lg-right" id="top-nav">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="#">Lorena Rodiguez</a>
-                  </li>
-                  <li class="nav-item">
-                    <a><img src="profileimg.png" alt=""></a>
-                  </li>
+                  <li class="nav-item active"><a class="nav-link" href="#">Lorena Rodiguez</a></li>
+                  <li class="nav-item"><a><img src="profileimg.png" alt=""></a></li>
                 </ul>
               </div>
             </nav>
@@ -56,57 +52,49 @@
                         <h2>Provedores</h2>
                    </div>
                     <div class="col-sm-6 col-md-3 wow fadeInLeft">
-                        <div class="block">
-                            <i class="tf-strategy"></i>   
+                        <div class="block">  
                             <h3>Fully Responsive</h3>
                             <p>Lorem ipsum dolor sit amet, con-sectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3 wow fadeInLeft" data-wow-delay="0.3s">
                         <div class="block">
-                            <i class="tf-circle-compass"></i>
                         	<h3>Speed Optimized</h3>
                             <p>Lorem ipsum dolor sit amet, con-sectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3 wow fadeInLeft" data-wow-delay="0.6s">
                         <div class="block">
-                            <i class="tf-anchor2"></i>
                             <h3>Tons of Feature</h3>
                             <p>Lorem ipsum dolor sit amet, con-sectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3 wow fadeInLeft" data-wow-delay="0.9s">
                         <div class="block">
-                            <i class="tf-globe"></i>
                             <h3>Fully SEO Optimized</h3>
                             <p>Lorem ipsum dolor sit amet, con-sectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3 wow fadeInLeft">
                         <div class="block">
-                            <i class="tf-strategy"></i>   
                             <h3>Fully Responsive</h3>
                             <p>Lorem ipsum dolor sit amet, con-sectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3 wow fadeInLeft" data-wow-delay="0.3s">
                         <div class="block">
-                            <i class="tf-circle-compass"></i>
                             <h3>Speed Optimized</h3>
                             <p>Lorem ipsum dolor sit amet, con-sectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3 wow fadeInLeft" data-wow-delay="0.6s">
                         <div class="block">
-                            <i class="tf-anchor2"></i>
                             <h3>Tons of Feature</h3>
                             <p>Lorem ipsum dolor sit amet, con-sectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3 wow fadeInLeft" data-wow-delay="0.9s">
                         <div class="block">
-                            <i class="tf-globe"></i>
                             <h3>Cloud Option</h3>
                             <p>Lorem ipsum dolor sit amet, con-sectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
                         </div>
@@ -114,19 +102,5 @@
                 </div>
             </div><!-- .container close -->
         </section><!-- #service close -->
-
-        <!-- Js -->
-        <script src="js/vendor/jquery-2.1.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <script src="js/jquery.lwtCountdown-1.0.js"></script>
-        <script src="js/owl.carousel.min.js"></script>
-        <script src="js/jquery.validate.min.js"></script>
-        <script src="js/jquery.form.js"></script>
-        <script src="js/jquery.nav.js"></script>
-        <script src="js/wow.min.js"></script>
-        <script src="js/main.js"></script>
-        
     </body>
 </html>
