--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/index.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/index.html
@@ -35,16 +35,13 @@
 	                        	<a class="btn btn-home" href="#service" role="button">Provedores</a>
                             </div>
                             <div class="wow fadeInDown" data-wow-delay="0.7s" data-wow-duration=".7s">
-	                        	<a class="btn btn-home" href="#service" role="button">Seguimiento</a>
+	                        	<a class="btn btn-home" href="Pages/seguimiento/index.html" role="button">Seguimiento</a>
 	                        </div>
 	                    </div>
 	                </div>
-	            </div><!-- .row close -->
-	        </div><!-- .container close -->
-	    </section><!-- header close -->
-        <!-- 
-        Service start
-        ==================== -->
+	            </div>
+	        </div>
+	    </section>
         <section id="service" class="service section">
             <div class="container">
                 <div class="row">
@@ -100,7 +97,7 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- .container close -->
-        </section><!-- #service close -->
+            </div>
+        </section>
     </body>
 </html>
