--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/index.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/index.html
@@ -20,22 +20,36 @@
             <nav class="navbar navbar-fixed-top  navigation " id="top-nav">
               <div class="collapse navbar-toggleable-md" id="navbarResponsive">
                 <ul class="nav navbar-nav menu float-lg-right" id="top-nav">
-                  <li class="nav-item active"><a class="nav-link" href="#">Lorena Rodiguez</a></li>
-                  <li class="nav-item"><a><img src="profileimg.png" alt=""></a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#">Lorena Rodiguez</a></li>
+                  <li class="nav-item profile-img"><a><img src="images/profileimg.png" alt=""></a></li>
                 </ul>
               </div>
             </nav>
         </div>
+
+        <div id="navegador">
+            <nav class="navegador">
+                <div class="logo_colpatria">
+                    <div class="animated2 flash2">
+                        <img src="images/Colpatria.png">
+                    </div>
+                    <div class="animated2 flash">
+                        <img src="images/Scotia.png">
+                    </div>
+                </div>
+            </nav>
+        </div>
+
 	    <section class="hero-area bg-1">
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-md-7">
 	                    <div class="block">
 	                        <div class="wow fadeInDown" data-wow-delay="0.7s" data-wow-duration=".7s">
-	                        	<a class="btn btn-home" href="#service" role="button">Provedores</a>
+	                        	<a class="btn btn-home prov" href="#service" role="button">Provedores</a>
                             </div>
                             <div class="wow fadeInDown" data-wow-delay="0.7s" data-wow-duration=".7s">
-	                        	<a class="btn btn-home" href="#service" role="button">Seguimiento</a>
+	                        	<a class="btn btn-home segui" href="#service" role="button">Seguimiento</a>
 	                        </div>
 	                    </div>
 	                </div>
