Button class fixed

--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/index.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/index.html
@@ -49,11 +49,7 @@
 	                        	<a class="btn btn-home prov" href="#service" role="button">Provedores</a>
                             </div>
                             <div class="wow fadeInDown" data-wow-delay="0.7s" data-wow-duration=".7s">
-<<<<<<< HEAD
-	                        	<a class="btn btn-home segui" href="#service" role="button">Seguimiento</a>
-=======
-	                        	<a class="btn btn-home" href="Pages/seguimiento/index.html" role="button">Seguimiento</a>
->>>>>>> 69ec7c854d1aabe759374110f7cdb6dae3b23ba1
+	                        	<a class="btn btn-home segui" href="Pages/seguimiento/index.html" role="button">Seguimiento</a>
 	                        </div>
 	                    </div>
 	                </div>
