--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/Pages/Seguimiento/index.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/Pages/Seguimiento/index.html
@@ -21,13 +21,28 @@
                 <div class="col-md-6">
                     <form class="form form-table" method="post" name="">
                         <div class="form-group">
-                            <h4>llena los espacios</h4>
+                            <h3>Llena los espacios</h3>
                         </div>
                         <div class="row">
                           <div class="col-lg-6 col-md-6 form-group">
-                            <label class="sr-only" for="email1">Correo</label>
-                            <input class="form-control hint" type="email" id="email1" name="email" placeholder="Email@domain.com" required="">
+                            <h5>Cedula de ciudadania</h5>
+                            <label class="sr-only" >Cedula Ciudadana</label>
+                            <input class="form-control hint" required="">
                           </div>
+                        </div>
+                        <div>
+                            <table class="egt">
+                                <tr>
+                                    <td>n° de producto</td>
+                                    <td>Celda 2</td>
+                                    <td>Celda 3</td>
+                                </tr>
+                                <tr>
+                                    <td>Celda 4</td>
+                                    <td>Celda 5</td>
+                                    <td>Celda 6</td>
+                                </tr>
+                            </table>
                         </div>
                         <div class="row">
                           <div class="col-lg-12 col-md-12">
