--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/Pages/Seguimiento/index.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/Pages/Seguimiento/index.html
@@ -30,26 +30,39 @@
                             <input class="form-control hint" required="">
                           </div>
                         </div>
-                        <div>
-                            <table class="egt">
-                                <tr>
-                                    <td>n° de producto</td>
-                                    <td>Celda 2</td>
-                                    <td>Celda 3</td>
-                                </tr>
-                                <tr>
-                                    <td>Celda 4</td>
-                                    <td>Celda 5</td>
-                                    <td>Celda 6</td>
-                                </tr>
-                            </table>
-                        </div>
                         <div class="row">
                           <div class="col-lg-12 col-md-12">
                             <button type="submit" class="btn btn-danger btn-lg">Buscar</button>
                           </div>
                         </div>
                       </form>
+                      <div>
+                            <table >
+                                 <h3>Pedidos</h3>
+                                <div class="tbody">
+                                        <tr>
+                                                <td>N° id</td>
+                                                <td>Producto</td>
+                                                <td>Provedor</td>
+                                            </tr>
+                                            <tr>
+                                                <td>11224433550</td>
+                                                <td>Zapatos</td>
+                                                <td>Adidas</td>
+                                            </tr>
+                                            <tr>
+                                                    <td>11224433550</td>
+                                                    <td>Camara</td>
+                                                    <td>Sony</td>
+                                                </tr>
+                                                <tr>
+                                                        <td>11224433550</td>
+                                                        <td>PIzza</td>
+                                                        <td>Domino's Pizza</td>
+                                                    </tr>
+                                </div>
+                            </table>
+                        </div>
                 </div>
                 <div class="col-md-5 col-md-offset-1">
                     
@@ -65,6 +78,8 @@
                     <h3><i class="fa fa-mobile fa-fw"></i>Informacion</h3>
                     <p>Email: <a href="#">yourname@gmail.com</a></p>
                     <p>Telefono: 333 333 33 33 </p>
+                    <h3><i class="fa fa-map-marker fa-fw"></i>Empresa transportadora</h3>
+                    <p>Empresa: <a href="#">Servientrega</a></p>
                 </div>
             </div>
         </div>
