--- a/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/index.html
+++ b/ScotiaSuppliersAdmin/ScotiaSuppliersAdmin/Design/Index/index.html
@@ -21,7 +21,7 @@
               <div class="collapse navbar-toggleable-md" id="navbarResponsive">
                 <ul class="nav navbar-nav menu float-lg-right" id="top-nav">
                     <li class="nav-item active"><a class="nav-link" href="#">Lorena Rodiguez</a></li>
-                  <li class="nav-item profile-img"><a><img src="https://icon-icons.com/icons2/876/PNG/32/female-user-profile-on-round-button_icon-icons.com_68317.png" alt=""></a></li>
+                  <li class="nav-item profile-img"><a><img src="images/profileimg.png" alt=""></a></li>
                 </ul>
               </div>
             </nav>
@@ -113,5 +113,16 @@
                 </div>
             </div>
         </section>
+        <script src="js/vendor/jquery-2.1.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <script src="js/jquery.lwtCountdown-1.0.js"></script>
+        <script src="js/owl.carousel.min.js"></script>
+        <script src="js/jquery.validate.min.js"></script>
+        <script src="js/jquery.form.js"></script>
+        <script src="js/jquery.nav.js"></script>
+        <script src="js/wow.min.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
